# sysalarm

./: .cproject  .gitignore  .project  INSTALL  Makefile  Makefile.am  TODO  action_cmd.c  action_mail.c  alarm_disk.c  alarm_tcp.c  autogen.sh  base.c  condition_cmd.c  condition_disk.c  condition_tcp.c  config.c  config.h  configure  configure.ac  old_config.c  old_config.h  parse.c  parse.h  sysalarm.c  sysalarm.conf  util.c  util.h
Debug/: makefile  subdir.mk
man/: Makefile  Makefile.am  Makefile.in  sysalarm.1
src/: Makefile.am  action_cmd.c  action_mail.c  action_xmpp.c  base.c  base.h  condition_cmd.c  condition_disk.c  condition_tcp.c  parse.c  state.c  state.h  sysalarm.c  util.c  util.h
